# discord-eu4-bot

./: .gitignore  README.md  database.db  pyproject.toml
app/: bot.py  bot_commands.py  main.py
app/configs/: en_conf.py
app/database/: db_context.py  db_models.py
app/db/: db_context.py  db_models.py
app/repositories/: role_repository.py
app/services/: chat_manage_service.py  db_commands.py  game_data_service.py
